[project]
name = "timestamp-converter"
version = "0.1.1"
description = "A package that converts Unix timestamps to ISO formatted timestamps."
authors = [
    {name = "Alina Li",email = "alinali87@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
flake8 = "^7.1.2"

