[project]
name = "timestamp-converter"
version = "0.1.1"
description = "A package that converts Unix timestamps to ISO formatted timestamps."
authors = [
    {name = "Alina Li",email = "alinali87@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.5", "flake8>=7.1.2"]

